--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "map": "cpp",
         "iostream": "cpp"
-    }
+    },
+    "makefile.configureOnOpen": false
 }
