Everything works, ditched namespace and naming convention for functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,7 +58,9 @@
         "cinttypes": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "codecvt": "cpp",
+        "ratio": "cpp"
     },
     "makefile.configureOnOpen": false
 }
