--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,7 @@
     "cinttypes": "cpp",
     "typeinfo": "cpp",
     "variant": "cpp",
-    "typeindex": "cpp"
+    "typeindex": "cpp",
+    "bitset": "cpp"
   }
 }
