ecs close to done, need system integration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 4.0)
 project(end)
 
 add_subdirectory(src/helper)
+add_subdirectory(src/ecs)
 add_subdirectory(src/graphics)
 add_subdirectory(src/window)
 add_subdirectory(src)
