--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(${PROJECT_NAME} main.cpp)
 target_link_libraries(${PROJECT_NAME}
   sub::mocha_helper
   sub::mocha_graphics
+  sub::mocha_ecs
   sub::mocha_window
 )
 
